# cunzhi-plus

./: .cursorrules  .gitignore  ACEMCP.md  AUTO_UPDATE_TOGGLE_FEATURE.md  COMPLETION_SUMMARY.md  Cargo.toml  INTEGRATION_TEST_REPORT.md  README.md  SECURITY_FIX_REPORT.md  fix_rmcp_api.py  package.json  tauri.conf.json  test_enhance.ps1  test_enhance.sh  test_enhance_interactive.ps1  test_mcp_protocol.ps1  test_mcp_tools.ps1  test_mcp_tools.sh  test_simple.ps1  test_with_delay.ps1  uno.config.ts  version.json
.serena/: project.yml
src/frontend/: main.ts
src/frontend/components/popup/: PopupInput.vue
src/frontend/components/settings/: VersionChecker.vue
src/frontend/components/tabs/: IntroTab.vue  McpToolsTab.vue  PromptsTab.vue
src/frontend/composables/: useMcpTools.ts
src/frontend/constants/: prompts.ts
src/rust/app/: builder.rs
src/rust/config/: settings.rs
src/rust/constants/: mcp.rs
src/rust/mcp/: commands.rs  server.rs  types.rs
src/rust/mcp/handlers/: response.rs
src/rust/mcp/tools/: mod.rs
src/rust/mcp/tools/acemcp/: commands.rs  mcp.rs  mod.rs  types.rs
src/rust/mcp/tools/enhance/: mcp.rs  mod.rs  pipeline.rs  scoring.rs  types.rs  vision.rs
src/rust/mcp/tools/interaction/: mcp.rs
src/rust/mcp/tools/memory/: mcp.rs
src/rust/mcp/utils/: errors.rs
src/rust/ui/: commands.rs  updater.rs
src/rust/utils/: logger.rs
